[package]
name = "mdplayscript"
version = "0.1.1"
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ShotaroTsuji/mdplayscript"
description = "An extension of Markdown for play scripts"
readme = "README.md"
categories = ["text-processing"]
keywords = ["markdown", "pulldown-cmark", "play"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
trim-in-place = "0.1.5"
eyre = "0.6.5"
structopt = "0.3.21"

[dev-dependencies]
toml = "0.5.8"
