[package]
name = "mdplayscript"
version = "0.4.0"
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ShotaroTsuji/mdplayscript"
description = "An extension of Markdown for play scripts"
readme = "README.md"
categories = ["text-processing"]
keywords = ["markdown", "pulldown-cmark", "play"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "6.0.0"
eyre = "0.6.5"
structopt = "0.3.21"
mdbook = "0.4.6"
serde_json = "1.0.59"
rust-embed = { version = "5.9.0", features = ["interpolate-folder-path"] }

[dev-dependencies]
toml = "0.5.8"
big_s = "1.0.2"
log = "0.4.14"
env_logger = "0.8.3"
